# hopping-robot

./: CMakeLists.txt  LICENSE  README.md
sdf/: ground_plane.sdf  robot_2d.sdf  robot_2d_less_collision.sdf  robot_2d_pinned.sdf
src/: Constraints.h  Optimize.cpp  Optimize.h  RobotSystem.cpp  RobotSystem.h  StateHelper.h  Utils.cpp  Utils.h  follow.cpp  main.cpp  replay.cpp  state_helper.h
